[SC-7940] fixed Double scroll bars in Contact Notes dialog

--- a/src/app/crm/contacts/notes/notes.component.less
+++ b/src/app/crm/contacts/notes/notes.component.less
@@ -1,9 +1,18 @@
 ﻿:host {
     width: 100%;
     height: 100%;
-    padding: 0 15px 0 0;
+    padding: 0 10px 0 0;
     display: block;
     position: relative;
+    
+    .notes-sidenav-content,
+    .notes-container {
+        height: 100%;
+    }
+    
+    .mat-drawer-content {
+        overflow: hidden;
+    }
     
     .add-note {
         position: absolute;
